# libpoly

./: .gitignore  CMakeLists.txt  Main.c  README.md
include/: math_func_ids.h  polynomial.h
src/: addition.c  checks.c  copy.c  deg.c  division.c  ext_gcd.c  fft.c  gcd.c  leading.c  maclaurin_exp.c  make_mono.c  make_poly.c  monomial.c  multiplication.c  normalize.c  polynomial.c  print.c  set_var.c  substitute.c  subtraction.c
